# Vulkan

./: .gitattributes  .gitignore  .travis.yml  Cargo.toml  README.md
assets/models/: color_teapot_spheres.gltf  cube.gltf  samplescene.gltf
assets/textures/: crate01_color_height_rgba.ktx  crate02_color_height_rgba.ktx  cubemap_yokohama_astc_8x8_unorm.ktx  cubemap_yokohama_etc2_unorm.ktx  metalplate01_rgba.ktx  metalplate_nomips_rgba.ktx  texturearray_astc_8x8_unorm.ktx  texturearray_bc3_unorm.ktx  texturearray_etc2_unorm.ktx
base/: Cargo.toml
base/src/: camera.rs  ci.rs  command.rs  constants.rs  context.rs  error.rs  gltf.rs  input.rs  lib.rs  platforms.rs  shader.rs  text.rs  texture.rs  ui.rs  workflow.rs
base/src/ci/: buffer.rs  command.rs  descriptor.rs  device.rs  image.rs  memory.rs  pipeline.rs  shader.rs  sync.rs  vma.rs
base/src/ci/pipeline/: renderpass.rs  state.rs
base/src/command/: compute.rs  graphics.rs  recorder.rs  transfer.rs
base/src/context/: debug.rs  device.rs  instance.rs  mod.rs  objects.rs  physical.rs  surface.rs  swapchain.rs
base/src/context/device/: logical.rs  physical.rs  queue.rs
base/src/context/physical/: extension.rs  feature.rs  property.rs
base/src/gltf/: asset.rs  loader.rs  material.rs  mesh.rs  node.rs  primitive.rs  scene.rs
base/src/gltf/meshes/: asset.rs  attributes.rs  indices.rs  mesh.rs  mod.rs  primitive.rs
base/src/gltf/nodes/: asset.rs  attachment.rs  mod.rs  node.rs
base/src/gltf/primitive/: asset.rs  attributes.rs  indices.rs
base/src/text/: pipeline.rs  text.frag.glsl
base/src/ui/: pipeline.rs  text.rs
base/src/utils/: cast.rs  color.rs  fps.rs  frame.rs  memory.rs  mod.rs  shaderc.rs  time.rs
base/src/workflow/: fps.rs  loops.rs  window.rs
ci/: azure-steps.yml
examples/: Cargo.toml
examples/src/: lib.rs
examples/src/ash_test/: triangle.rs
examples/src/descriptorsets/: cube.frag.glsl  cube.vert.glsl  example.rs  main.rs
examples/src/dynamicuniformbuffer/: base.frag.glsl  base.vert.glsl  data.rs  example.rs  main.rs
examples/src/pipelines/: example.rs  main.rs  phong.frag.glsl  phong.vert.glsl  toon.frag.glsl  toon.vert.glsl  treasure_smooth.gltf  wireframe.frag.glsl  wireframe.vert.glsl
examples/src/pushconstants/: example.rs  lights.frag.glsl  lights.vert.glsl  main.rs
examples/src/specializationconstants/: example.rs  main.rs  uber.frag.glsl  uber.vert.glsl
examples/src/text-overlay/: example.rs  main.rs  text.frag.glsl  text.rs  text.vert.glsl
examples/src/texture/: data.rs  example.rs  main.rs  texture.frag.glsl  texture.vert.glsl
examples/src/texturearray/: data.rs  example.rs  instancing.frag.glsl  instancing.vert.glsl  main.rs
examples/src/texturecubemap/: data.rs  example.rs  main.rs  reflect.frag.glsl  reflect.vert.glsl  skybox.frag.glsl  skybox.vert.glsl
examples/src/triangle/: data.rs  example.rs  helper.rs  main.rs  triangle.frag.glsl
examples/src/triangle_v1/: data.rs  example.rs  helper.rs  main.rs  triangle.vert.glsl
examples/src/triangle_v2/: data.rs  example.rs  helper.rs  main.rs
