
[package]
name     = "vulkan-base"
version  = "0.2.0"
authors  = ["usami-renko <usami-ssc@protonmail.com>"]
edition  = "2018"
keywords = ["Vulkan", "Rust", "Graphics"]
description = "A library to provide convenient methods to access vulkan."

[dependencies]
ash            = "0.27.1"
winit          = "0.18.1"
shaderc        = "0.3.10"
smallvec       = "0.6.5"
gltf           = "0.11.2"
nalgebra       = "0.16"
failure        = "0.1.5"
failure_derive = "0.1.5"
serde          = "1.0.80"
serde_derive   = "1.0.80"
bincode        = "1.0.1"
memoffset      = "0.2"
num            = "0.2"

# vulkan platform dependencies on macOS.
[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.13.0"
cocoa = "0.18.4"
objc  = "0.2.5"

# vulkan platform dependencies on Windows.
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.5", features = ["windef", "libloaderapi"] }
