
[package]
name     = "vkexamples"
version  = "0.2.0"
authors  = ["usami-renko <usami-ssc@protonmail.com>"]
edition  = "2018"
keywords = ["Vulkan", "Rust", "Graphics"]
description = '''
An implementaion of SaschaWillems/Vulkan(https://github.com/SaschaWillems/Vulkan) using the Rust Programming Language.
'''

[dependencies]
ash = "0.27.1"
winit = "0.18.1"
nalgebra = "0.16"
shaderc = "0.3.10"
memoffset = "0.2"

vkbase = { package = "vulkan-base", path = "../base" }

[[bin]]
name = "ash_test"
path = "src/ash_test/triangle.rs"

[[bin]]
name = "triangle_v1"
path = "src/triangle_v1/main.rs"

[[bin]]
name = "triangle_v2"
path = "src/triangle_v2/main.rs"

[[bin]]
name = "pipelines"
path = "src/pipelines/main.rs"
