
[package]
name     = "vkexamples"
version  = "0.2.0"
authors  = ["usami-renko <usami-ssc@protonmail.com>"]
edition  = "2018"
keywords = ["Vulkan", "Rust", "Graphics"]
description = '''
An implementaion of SaschaWillems/Vulkan(https://github.com/SaschaWillems/Vulkan) using the Rust Programming Language.
'''

[dependencies]
ash         = "0.27.1"
winit       = "0.18.1"
nalgebra    = "0.16"
shaderc     = "0.3.10"
memoffset   = "0.2"
rusttype    = "0.7.5"
lazy_static = "1.2.0"
rand        = "0.6"
arrayvec    = "0.4.10"

vkbase = { package = "vulkan-base", path = "../base" }
vma = { package = "vk-mem", version = "0.1.4" }
gli = { package = "gli-rs", version = "0.2.0" }

# Basics ----------------------------------------------

# 00 - Test Ash
[[bin]]
name = "ash_test"
path = "src/ash_test/triangle.rs"

# 01 - Triangle V1
[[bin]]
name = "triangle_v1"
path = "src/triangle_v1/main.rs"

# 02 - Triangle V2
[[bin]]
name = "triangle_v2"
path = "src/triangle_v2/main.rs"

# 03 - Pipelines
[[bin]]
name = "pipelines"
path = "src/pipelines/main.rs"

# 04 - Descriptor sets
[[bin]]
name = "descriptorsets"
path = "src/descriptorsets/main.rs"

# 05 - Dynamic uniform buffers
[[bin]]
name = "dynamicuniformbuffer"
path = "src/dynamicuniformbuffer/main.rs"

# 06 - Push constants
[[bin]]
name = "pushconstants"
path = "src/pushconstants/main.rs"

# 07 - Specialization constants
[[bin]]
name = "specializationconstants"
path = "src/specializationconstants/main.rs"

# 08 - Texture mapping
[[bin]]
name = "texture"
path = "src/texture/main.rs"

# 09 - Cube map textures
[[bin]]
name = "texturecubemap"
path = "src/texturecubemap/main.rs"

# 10 - Texture arrays
[[bin]]
name = "texturearray"
path = "src/texturearray/main.rs"
# -----------------------------------------------------


[[bin]]
name = "text-overlay"
path = "src/text-overlay/main.rs"
